--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <div class="Works">
         <h1>Work Experiences</h1>
-        <li>Volunteer in The National Election Committee or (គ.ជ.ប) / Position : First assistant (ជំនួយការទី១)</li>
+        <li>Volunteer in The National Election Committee or (គ.ជ.ប) | Position : First assistant (ជំនួយការទី១)</li>
         <p style="margin-left: 22px;">25 July 2023</p>
     </div>
     <div class="end"></div>
