--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <header>
-    <img src="IMG_85161.JPG" style="height: 250px;margin-right: 50px;" align="right">
+    <img src="IMG_85161.jpg" style="height: 250px;margin-right: 50px;" align="right">
     <div class="Title">
         <h1>VIBOL SOVICHEA</h1>
         <h2>college student</h2>
