--- a/index.html
+++ b/index.html
@@ -3,44 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Sovichea's Cirriculum Vitae</title>
+    <link rel="stylesheet" href="style1.css">
 </head>
-
-<header>
-    <img src="IMG_85161.jpg" style="height: 250px;margin-right: 50px;" align="right">
-    <div class="Title">
-        <h1>VIBOL SOVICHEA</h1>
-        <h2>college student</h2>
-    </div>
-</header>
-<body>
-    <div class="profile">
-        <h1>Personal Informations</h1>
-        <li>Tel&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: (+855) 96 298 5288</li>
-        <li>Email&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: sovicheavibol9@gmail.com</li>
-        <li>Address&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: Khan Doun Penh, Phnom Penh</li>
-    </div>
-    <div class="skill">
-        <h1>Skills</h1>
-        <li>Microsoft Office (Excel, Powerpoint, Words).</li>
-        <li>Photoshops.</li>
-        <li>Basic Management skills and people skills.</li>
-    </div>
-    <div class="Educations">
-        <h1>Education</h1>
-        <li>Highschool Diploma, Baktouk Highschool, Phnom Penh.</li>
-        <p style="margin-left: 22px;">05 December 2022</p>
-        <li>Freshman, Bachelor Degree in Imformation Technology, National University of Management, Phnom Penh.</li>
-        <p style="margin-left: 22px;">01 March 2023</p>
-        <li>Freshman, Bachelor Degree in Computer Science, Royal University of Phnom Penh, Phnom Penh.</li>
-        <p style="margin-left: 22px;">01 March 2023</p>
-    </div>
-    <div class="Works">
-        <h1>Work Experiences</h1>
-        <li>Volunteer in The National Election Committee or (គ.ជ.ប) | Position : First assistant (ជំនួយការទី១)</li>
-        <p style="margin-left: 22px;">25 July 2023</p>
-    </div>
-    <div class="end"></div>
-</body>
+<div class="main">
+    <header>
+        <img src="IMG_85161.jpg" style="height: 250px;margin-right: 100px;" align="right">
+        <div class="Title">
+            <h1>VIBOL SOVICHEA</h1>
+            <h2>college student</h2>
+        </div>
+    </header>
+    <body>
+        <div class="background"></div>
+        <div class="profile">
+            <h1>Personal Informations</h1>
+            <li>Sex&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Male</li>
+            <li>Nationality&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Khmer</li>
+            <li>Date of birth&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 05 October 2004</li>
+            <li>Tel&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(855) 96 298 5288</li>
+            <li>Email&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; sovicheavibol9@gmail.com</li>
+            <li>Address&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Khan Doun Penh, Phnom Penh</li>
+        </div>
+        <div class="skill">
+            <h1>Skills</h1>
+            <li>Microsoft Office (Excel, Powerpoint, Words).</li>
+            <li>Photoshops.</li>
+            <li>Basic Management skills and people skills.</li>
+            <li>Programming</li>
+            <li style="margin-left: 21px;list-style-type:circle;">C Programming&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;( Intermediate )</li>
+            <li style="margin-left: 21px;list-style-type:circle;">HTML , CSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;( Intermediate )</li>
+        </div>
+        <div class="Educations">
+            <h1>Educations</h1>
+            <li>Highschool Diploma, Baktouk Highschool, Phnom Penh.</li>
+            <p style="margin-left: 22px;">05 December 2022</p>
+            <li>Freshman, Bachelor Degree in Imformation Technology, National University of Management, Phnom Penh.</li>
+            <p style="margin-left: 22px;">01 March 2023 - present</p>
+            <li>Freshman, Bachelor Degree in Computer Science, Royal University of Phnom Penh, Phnom Penh.</li>
+            <p style="margin-left: 22px;">01 March 2023 - present</p>
+        </div>
+        <div class="Works">
+            <h1>Work Experiences</h1>
+            <li>Volunteer in The National Election Committee or (គ.ជ.ប)</li>
+            <li style="list-style-type:circle;margin-left: 25px;">Role : First assistant</li>
+            <p style="margin-left: 22px;">25 July 2023</p>
+        </div>
+    </body>
+</div>
 </html>
