--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sovichea's Cirriculum Vitae</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
 </head>
 <div class="main">
     <header>
-        <img src="IMG_85161.jpg" style="height: 250px;margin-right: 100px;" align="right">
+        <img src="IMG_85161.jpg" style="height: 250px;margin-left: 40px;border-radius: 10px;" align="left">
         <div class="Title">
-            <h1>VIBOL SOVICHEA</h1>
-            <h2>college student</h2>
+            <center>
+                <h1>VIBOL SOVICHEA</h1>
+                <h2>college student</h2>
+        </center>
         </div>
     </header>
     <body>
@@ -27,16 +29,15 @@
         </div>
         <div class="skill">
             <h1>Skills</h1>
-            <li>Microsoft Office (Excel, Powerpoint, Words).</li>
-            <li>Photoshops.</li>
-            <li>Basic Management skills and people skills.</li>
+            <li>Microsoft Offices&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;( Excel, Powerpoint, Words )</li>
+            <li>Photoshop</li>
             <li>Programming</li>
             <li style="margin-left: 21px;list-style-type:circle;">C Programming&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;( Intermediate )</li>
-            <li style="margin-left: 21px;list-style-type:circle;">HTML , CSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;( Intermediate )</li>
+            <li style="margin-left: 21px;list-style-type:circle;">HTML , CSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;( Beginner )</li>
         </div>
         <div class="Educations">
             <h1>Educations</h1>
-            <li>Highschool Diploma, Baktouk Highschool, Phnom Penh.</li>
+            <li>Highschool graduate, Baktouk Highschool, Phnom Penh.</li>
             <p style="margin-left: 22px;">05 December 2022</p>
             <li>Freshman, Bachelor Degree in Imformation Technology, National University of Management, Phnom Penh.</li>
             <p style="margin-left: 22px;">01 March 2023 - present</p>
@@ -45,8 +46,7 @@
         </div>
         <div class="Works">
             <h1>Work Experiences</h1>
-            <li>Volunteer in The National Election Committee or (គ.ជ.ប)</li>
-            <li style="list-style-type:circle;margin-left: 25px;">Role : First assistant</li>
+            <li>Work in The National Election Committee or (គ.ជ.ប) | Role : First assistant</li>
             <p style="margin-left: 22px;">25 July 2023</p>
         </div>
     </body>
