--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sovichea's Cirriculum Vitae</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
 </head>
 <div class="main">
     <header>
-        <img src="IMG_85161.jpg" style="height: 250px;margin-left: 40px;border-radius: 10px;" align="left">
+        <img src="IMG_85161.jpg" style="height: 260px;margin-left: 40px;border-radius: 10px;" align="left">
         <div class="Title">
             <center>
                 <h1>VIBOL SOVICHEA</h1>
@@ -20,20 +20,20 @@
         <div class="background"></div>
         <div class="profile">
             <h1>Personal Informations</h1>
-            <li>Sex&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Male</li>
-            <li>Nationality&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Khmer</li>
-            <li>Date of birth&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 05 October 2004</li>
-            <li>Tel&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(855) 96 298 5288</li>
-            <li>Email&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; sovicheavibol9@gmail.com</li>
-            <li>Address&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Khan Doun Penh, Phnom Penh</li>
+            <li>Sex&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Male</li><br>
+            <li>Nationality&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Khmer</li><br>
+            <li>Date of birth&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 05 October 2004</li><br>
+            <li>Tel&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(855) 96 298 5288</li><br>
+            <li>Email&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; sovicheavibol9@gmail.com</li><br>
+            <li>Address&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Khan Doun Penh, Phnom Penh</li><br>
         </div>
         <div class="skill">
             <h1>Skills</h1>
-            <li>Microsoft Offices&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;( Excel, Powerpoint, Words )</li>
-            <li>Photoshop</li>
-            <li>Programming</li>
-            <li style="margin-left: 21px;list-style-type:circle;">C Programming&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;( Intermediate )</li>
-            <li style="margin-left: 21px;list-style-type:circle;">HTML , CSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;( Beginner )</li>
+            <li>Microsoft Offices&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;( Excel, Powerpoint, Words )</li><br>
+            <li>Photoshop&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;( Intermediate )</li><br>
+            <li>Programming</li><br>
+            <li style="margin-left: 21px;list-style-type:circle;">C Programming&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;( Intermediate )</li><br>
+            <li style="margin-left: 21px;list-style-type:circle;">HTML , CSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;( Beginner )</li><br>
         </div>
         <div class="Educations">
             <h1>Educations</h1>
@@ -46,8 +46,14 @@
         </div>
         <div class="Works">
             <h1>Work Experiences</h1>
-            <li>Work in The National Election Committee or (គ.ជ.ប) | Role : First assistant</li>
+            <li>Volunteer in The National Election Committee or (គ.ជ.ប)</li>
+            <p style="margin-left: 22px;">Role : First assistant</p>
             <p style="margin-left: 22px;">25 July 2023</p>
+        </div>
+        <div class="Languages">
+            <h1>Languages</h1>
+            <li>English&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Read write and communicate</li><br>
+            <li>Khmer&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mother tounge</li><br>
         </div>
     </body>
 </div>
