--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li>Date of birth&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 05 October 2004</li><br>
             <li>Tel&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(855) 96 298 5288</li><br>
             <li>Email&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; sovicheavibol9@gmail.com</li><br>
-            <li>Address&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Khan Doun Penh, Phnom Penh</li><br>
+            <li>Address&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Khan Doun Penh, Phnom Penh</li>
         </div>
         <div class="skill">
             <h1>Skills</h1>
@@ -33,7 +33,7 @@
             <li>Photoshop&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;( Intermediate )</li><br>
             <li>Programming</li><br>
             <li style="margin-left: 21px;list-style-type:circle;">C Programming&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;( Intermediate )</li><br>
-            <li style="margin-left: 21px;list-style-type:circle;">HTML , CSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;( Beginner )</li><br>
+            <li style="margin-left: 21px;list-style-type:circle;">HTML , CSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;( Beginner )</li>
         </div>
         <div class="Educations">
             <h1>Educations</h1>
@@ -53,7 +53,7 @@
         <div class="Languages">
             <h1>Languages</h1>
             <li>English&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Read write and communicate</li><br>
-            <li>Khmer&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mother tounge</li><br>
+            <li>Khmer&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mother tounge</li>
         </div>
     </body>
 </div>
