--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h1>Educations</h1>
             <li>Highschool graduate, Baktouk Highschool, Phnom Penh.</li>
             <p style="margin-left: 22px;">05 December 2022</p>
-            <li>Freshman, Bachelor Degree in Imformation Technology, National University of Management, Phnom Penh.</li>
+            <li>Freshman, Bachelor Degree in Information Technology, National University of Management, Phnom Penh.</li>
             <p style="margin-left: 22px;">01 March 2023 - present</p>
             <li>Freshman, Bachelor Degree in Computer Science, Royal University of Phnom Penh, Phnom Penh.</li>
             <p style="margin-left: 22px;">01 March 2023 - present</p>
